// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Utilities: Flex AlignContent renders 1`] = `
<Fragment>
  <h2
    id="align-content"
  >
    Align content
  </h2>
  <p>
    Use 
    <CodeTags
      code="align-content"
      type="secondary"
    />
     utilities on flexbox containers to align flex items together on the cross axis. Choose from 
    <CodeTags
      code="start"
      type="secondary"
    />
     (browser default), 
    <CodeTags
      code="end"
      type="secondary"
    />
    , 
    <CodeTags
      code="center"
      type="secondary"
    />
    , 
    <CodeTags
      code="between"
      type="secondary"
    />
    , 
    <CodeTags
      code="around"
      type="secondary"
    />
    , or 
    <CodeTags
      code="stretch"
      type="secondary"
    />
    . To demonstrate these utilities, we’ve enforced 
    <CodeTags
      code="flex-wrap: wrap"
      type="secondary"
    />
     and increased the number of flex items.
  </p>
  <p>
    <b>
      Heads up!
    </b>
     This property has no effect on single rows of flex items.
  </p>
  <ComponentPreview
    language="html"
    showCasePanel={true}
  >
    <div
      className="d-flex align-content-start flex-wrap sc-highlight mb-3"
      style={
        Object {
          "height": "200px",
        }
      }
    >
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
    </div>
  </ComponentPreview>
  <ComponentPreview
    codeFigure={true}
    language="html"
  >
    <div
      className="d-flex align-content-start flex-wrap"
    >
      ...
    </div>
  </ComponentPreview>
  <ComponentPreview
    language="html"
    showCasePanel={true}
  >
    <div
      className="d-flex align-content-end flex-wrap sc-highlight mb-3"
      style={
        Object {
          "height": "200px",
        }
      }
    >
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
    </div>
  </ComponentPreview>
  <ComponentPreview
    codeFigure={true}
    language="html"
  >
    <div
      className="d-flex align-content-end flex-wrap"
    >
      ...
    </div>
  </ComponentPreview>
  <ComponentPreview
    language="html"
    showCasePanel={true}
  >
    <div
      className="d-flex align-content-between flex-wrap sc-highlight mb-3"
      style={
        Object {
          "height": "200px",
        }
      }
    >
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
    </div>
  </ComponentPreview>
  <ComponentPreview
    codeFigure={true}
    language="html"
  >
    <div
      className="d-flex align-content-between flex-wrap"
    >
      ...
    </div>
  </ComponentPreview>
  <ComponentPreview
    language="html"
    showCasePanel={true}
  >
    <div
      className="d-flex align-content-around flex-wrap sc-highlight mb-3"
      style={
        Object {
          "height": "200px",
        }
      }
    >
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
    </div>
  </ComponentPreview>
  <ComponentPreview
    codeFigure={true}
    language="html"
  >
    <div
      className="d-flex align-content-around flex-wrap"
    >
      ...
    </div>
  </ComponentPreview>
  <ComponentPreview
    language="html"
    showCasePanel={true}
  >
    <div
      className="d-flex align-content-stretch flex-wrap sc-highlight mb-3"
      style={
        Object {
          "height": "200px",
        }
      }
    >
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
    </div>
  </ComponentPreview>
  <ComponentPreview
    codeFigure={true}
    language="html"
  >
    <div
      className="d-flex align-content-stretch flex-wrap"
    >
      ...
    </div>
  </ComponentPreview>
  <p>
    Responsive variations also exist for 
    <CodeTags
      code="align-content"
      type="secondary"
    />
    .
  </p>
  <ul>
    <li>
      <CodeTags
        code=".align-content-start"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".align-content-end"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".align-content-center"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".align-content-around"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".align-content-stretch"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".align-content-{breakpoint}-start"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".align-content-{breakpoint}-end"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".align-content-{breakpoint}-center"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".align-content-{breakpoint}-around"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".align-content-{breakpoint}-stretch"
        type="secondary"
      />
    </li>
  </ul>
</Fragment>
`;

exports[`Utilities: Flex AlignItems renders 1`] = `
<Fragment>
  <h2
    id="align-items"
  >
    Align items 
  </h2>
  <p>
    Use 
    <CodeTags
      code="align-items"
      type="secondary"
    />
     utilities on flexbox containers to change the alignment of flex items on the cross axis (the y-axis to start, x-axis if 
    <CodeTags
      code="flex-direction: column"
      type="secondary"
    />
    ). Choose from 
    <CodeTags
      code="start"
      type="secondary"
    />
    , 
    <CodeTags
      code="end"
      type="secondary"
    />
    , 
    <CodeTags
      code="center"
      type="secondary"
    />
    , 
    <CodeTags
      code="baseline"
      type="secondary"
    />
    , or 
    <CodeTags
      code="stretch"
      type="secondary"
    />
     (browser default).
  </p>
  <ComponentPreview
    language="html"
    showCasePanel={true}
  >
    <div
      className="d-flex align-items-start sc-highlight mb-3"
      style={
        Object {
          "height": "100px",
        }
      }
    >
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
    </div>
    <div
      className="d-flex align-items-end sc-highlight mb-3"
      style={
        Object {
          "height": "100px",
        }
      }
    >
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
    </div>
    <div
      className="d-flex align-items-center sc-highlight mb-3"
      style={
        Object {
          "height": "100px",
        }
      }
    >
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
    </div>
    <div
      className="d-flex align-items-baseline sc-highlight mb-3"
      style={
        Object {
          "height": "100px",
        }
      }
    >
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
    </div>
    <div
      className="d-flex align-items-stretch sc-highlight"
      style={
        Object {
          "height": "100px",
        }
      }
    >
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
    </div>
  </ComponentPreview>
  <ComponentPreview
    codeFigure={true}
    language="html"
  >
    <div
      className="d-flex align-items-start"
      style={
        Object {
          "height": "100px",
        }
      }
    >
      ...
    </div>
    <div
      className="d-flex align-items-end"
      style={
        Object {
          "height": "100px",
        }
      }
    >
      ...
    </div>
    <div
      className="d-flex align-items-center"
      style={
        Object {
          "height": "100px",
        }
      }
    >
      ...
    </div>
    <div
      className="d-flex align-items-baseline"
      style={
        Object {
          "height": "100px",
        }
      }
    >
      ...
    </div>
    <div
      className="d-flex align-items-stretch"
      style={
        Object {
          "height": "100px",
        }
      }
    >
      ...
    </div>
  </ComponentPreview>
  <p>
    Responsive variations also exist for 
    <CodeTags
      code="align-items"
      type="secondary"
    />
    .
  </p>
  <ul>
    <li>
      <CodeTags
        code=".align-items-start"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".align-items-end"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".align-items-center"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".align-items-baseline"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".align-items-stretch"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".align-items-{breakpoint}-start"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".align-items-{breakpoint}-end"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".align-items-{breakpoint}-center"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".align-items-{breakpoint}-baseline"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".align-items-{breakpoint}-stretch"
        type="secondary"
      />
    </li>
  </ul>
</Fragment>
`;

exports[`Utilities: Flex AlignSelf renders 1`] = `
<Fragment>
  <h2
    id="align-self"
  >
    Align self
  </h2>
  <p>
    Use 
    <CodeTags
      code="align-self"
      type="secondary"
    />
     utilities on flexbox items to individually change their alignment on the cross axis (the y-axis to start, x-axis if 
    <CodeTags
      code="flex-direction: column"
      type="secondary"
    />
    ). Choose from he same options as 
    <CodeTags
      code="align-items"
      type="secondary"
    />
    : 
    <CodeTags
      code="start"
      type="secondary"
    />
    , 
    <CodeTags
      code="end"
      type="secondary"
    />
    , 
    <CodeTags
      code="center"
      type="secondary"
    />
    , 
    <CodeTags
      code="baseline"
      type="secondary"
    />
     or  
    <CodeTags
      code="stretch"
      type="secondary"
    />
     (browswer default).
  </p>
  <ComponentPreview
    language="html"
    showCasePanel={true}
  >
    <div
      className="d-flex sc-highlight mb-3"
      style={
        Object {
          "height": "100px",
        }
      }
    >
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="align-self-start p-2 sc-highlight"
      >
        Aligned flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
    </div>
    <div
      className="d-flex sc-highlight mb-3"
      style={
        Object {
          "height": "100px",
        }
      }
    >
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="align-self-end p-2 sc-highlight"
      >
        Aligned flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
    </div>
    <div
      className="d-flex sc-highlight mb-3"
      style={
        Object {
          "height": "100px",
        }
      }
    >
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="align-self-center p-2 sc-highlight"
      >
        Aligned flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
    </div>
    <div
      className="d-flex sc-highlight mb-3"
      style={
        Object {
          "height": "100px",
        }
      }
    >
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="align-self-baseline p-2 sc-highlight"
      >
        Aligned flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
    </div>
    <div
      className="d-flex sc-highlight"
      style={
        Object {
          "height": "100px",
        }
      }
    >
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="align-self-stretch p-2 sc-highlight"
      >
        Aligned flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
    </div>
  </ComponentPreview>
  <ComponentPreview
    codeFigure={true}
    language="html"
  >
    <div
      className="align-self-start"
    >
      Aligned flex item
    </div>
    <div
      className="align-self-end"
    >
      Aligned flex item
    </div>
    <div
      className="align-self-center"
    >
      Aligned flex item
    </div>
    <div
      className="align-self-baseline"
    >
      Aligned flex item
    </div>
    <div
      className="align-self-stretch"
    >
      Aligned flex item
    </div>
  </ComponentPreview>
  <p>
    Responsive variations also exist for 
    <CodeTags
      code="align-self"
      type="secondary"
    />
    .
  </p>
  <ul>
    <li>
      <CodeTags
        code=".align-self-start"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".align-self-end"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".align-self-center"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".align-self-baseline"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".align-self-stretch"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".align-self-{breakpoint}-start"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".align-self-{breakpoint}-end"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".align-self-{breakpoint}-center"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".align-self-{breakpoint}-baseline"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".align-self-{breakpoint}-stretch"
        type="secondary"
      />
    </li>
  </ul>
</Fragment>
`;

exports[`Utilities: Flex AutoMargins renders 1`] = `
<Fragment>
  <h2
    id="auto-margins"
  >
    Auto margins
  </h2>
  <p>
    Flexbox can do some pretty awesome things when you mix flex alignments with auto margins. Shown below are three examples of controlling flex items via auto margins: default (no auto margin), pushing two items to the right (
    <CodeTags
      code=".mr-auto"
      type="secondary"
    />
    ), and pushing two items to the left (
    <CodeTags
      code=".ml-auto"
      type="secondary"
    />
    ).
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="d-flex sc-highlight mb-3"
    >
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
    </div>
    <div
      className="d-flex sc-highlight mb-3"
    >
      <div
        className="mr-auto p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
    </div>
    <div
      className="d-flex sc-highlight mb-3"
    >
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="ml-auto p-2 sc-highlight"
      >
        Flex item
      </div>
    </div>
  </ComponentPreview>
  <h3>
    With align-items
  </h3>
  <p>
    Vertically move one flex item to the top or bottom of a container by mixing 
    <CodeTags
      code="align-items"
      type="secondary"
    />
    , 
    <CodeTags
      code="flex-direction: column"
      type="secondary"
    />
    , and 
    <CodeTags
      code="margin-top: auto"
      type="secondary"
    />
     or 
    <CodeTags
      code="margin-bottom: auto"
      type="secondary"
    />
    .
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="d-flex align-items-start flex-column sc-highlight mb-3"
      style={
        Object {
          "height": "200px",
        }
      }
    >
      <div
        className="mb-auto p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
    </div>
    <div
      className="d-flex align-items-end flex-column sc-highlight mb-3"
      style={
        Object {
          "height": "200px",
        }
      }
    >
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="mt-auto p-2 sc-highlight"
      >
        Flex item
      </div>
    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Utilities: Flex Direction renders 1`] = `
<Fragment>
  <h2
    id="direction"
  >
    Direction
  </h2>
  <p>
    Set the direction of flex items in a flex container with direction utilities. In most cases you can omit the horizontal class here as the browser default is 
    <CodeTags
      code="row"
      type="secondary"
    />
    . However, you may encounter situations where you needed to explicitly set this value (like responsive layouts).
  </p>
  <p>
    Use 
    <CodeTags
      code=".flex-row"
      type="secondary"
    />
     to set a horizontal direction (the browser default), or 
    <CodeTags
      code=".flex-row-reverse"
      type="secondary"
    />
     to start the horizontal direction from the opposite side.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="d-flex flex-row sc-highlight mb-3"
    >
      <div
        className="p-2 sc-highlight"
      >
        Flex item 1
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item 2
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item 3
      </div>
    </div>
    <div
      className="d-flex flex-row-reverse sc-highlight"
    >
      <div
        className="p-2 sc-highlight"
      >
        Flex item 1
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item 2
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item 3
      </div>
    </div>
  </ComponentPreview>
  <p>
    Use 
    <CodeTags
      code=".flex-column"
      type="secondary"
    />
     to set a vertical direction, or 
    <CodeTags
      code=".flex-column-reverse"
      type="secondary"
    />
     to start the vertical direction from the opposite side.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="d-flex flex-column sc-highlight mb-3"
    >
      <div
        className="p-2 sc-highlight"
      >
        Flex item 1
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item 2
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item 3
      </div>
    </div>
    <div
      className="d-flex flex-column-reverse sc-highlight"
    >
      <div
        className="p-2 sc-highlight"
      >
        Flex item 1
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item 2
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item 3
      </div>
    </div>
  </ComponentPreview>
  <p>
    Responsive variations also exist for 
    <CodeTags
      code="flex-direction"
      type="secondary"
    />
    .
  </p>
  <ul>
    <li>
      <CodeTags
        code=".flex-row"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".flex-row-reverse"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".flex-column"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".flex-column-reverse"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".flex-{breakpoint}-row"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".flex-{breakpoint}-row-reverse"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".flex-{breakpoint}-column"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".flex-{breakpoint}-column-reverse"
        type="secondary"
      />
    </li>
  </ul>
</Fragment>
`;

exports[`Utilities: Flex EnableFlexBehaviors renders 1`] = `
<Fragment>
  <h2
    id="enable-flex-behaviors"
  >
    Enable flex behaviors
  </h2>
  <p>
    Apply 
    <CodeTags
      code="display"
      type="secondary"
    />
     utilities to create a flexbox container and transform 
    <b>
      direct children elements
    </b>
     into flex items. Flex containers and items are able to be modified further with additional flex properties.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="d-flex p-2 sc-highlight"
    >
      Im a flexbox container!
    </div>
  </ComponentPreview>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="d-inline-flex p-2 sc-highlight"
    >
      Im an inline flexbox container!
    </div>
  </ComponentPreview>
  <p>
    Responsive variations also exist for 
    <CodeTags
      code=".d-flex"
      type="secondary"
    />
     and 
    <CodeTags
      code=".d-inline-flex"
      type="secondary"
    />
    .
  </p>
  <ul>
    <li>
      <CodeTags
        code=".d-flex"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".d-inline-flex"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".d-{breakpoint}-flex"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".d-{breakpoint}-inline-flex"
        type="secondary"
      />
    </li>
  </ul>
</Fragment>
`;

exports[`Utilities: Flex Fill renders 1`] = `
<Fragment>
  <h2
    id="fill"
  >
    Fill
  </h2>
  <p>
    Use 
    <CodeTags
      code=".flex-fill"
      type="secondary"
    />
     class on a series of sibling elements to force them into equal widths while taking up all available horizontal space.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="d-flex sc-highlight"
    >
      <div
        className="p-2 flex-fill sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 flex-fill sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 flex-fill sc-highlight"
      >
        Flex item
      </div>
    </div>
  </ComponentPreview>
  <p>
    Responsive variations also exist for 
    <CodeTags
      code=".flex-fill"
      type="secondary"
    />
    .
  </p>
  <ul>
    <li>
      <CodeTags
        code=".flex-fill"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".flex-{breakpoint}-fill"
        type="secondary"
      />
    </li>
  </ul>
</Fragment>
`;

exports[`Utilities: Flex GrowAndShrink renders 1`] = `
<Fragment>
  <h2
    id="grow-and-shrink"
  >
    Grow and shrink
  </h2>
  <p>
    Use 
    <CodeTags
      code=".flex-grow-*"
      type="secondary"
    />
     utilities to toggle a flex item’s ability to grow to fill available space. In the example below, the 
    <CodeTags
      code=".flex-grow-1"
      type="secondary"
    />
     elements uses all available space it can, while allowing the remaining two flex items their necessary space.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="d-flex sc-highlight"
    >
      <div
        className="p-2 flex-grow-1 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Third flex item
      </div>
    </div>
  </ComponentPreview>
  <p>
    Use 
    <CodeTags
      code=".flex-shrink-*"
      type="secondary"
    />
      utilities to toggle a flex item’s ability to shrink if necessary. In the example below, the second flex item with 
    <CodeTags
      code=".flex-shrink-1"
      type="secondary"
    />
     is forced to wrap it’s contents to a new line, “shrinking” to allow more space for the previous flex item with 
    <CodeTags
      code=".w-100"
      type="secondary"
    />
    .
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="d-flex sc-highlight"
    >
      <div
        className="p-2 w-100 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 flex-shrink-1 sc-highlight"
      >
        Flex item
      </div>
    </div>
  </ComponentPreview>
  <p>
    Responsive variations also exist for 
    <CodeTags
      code=".flex-grow"
      type="secondary"
    />
     and 
    <CodeTags
      code=".flex-shrink"
      type="secondary"
    />
    .
  </p>
  <ul>
    <li>
      <CodeTags
        code=".flex-{grow|shrink}-0"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".flex-{grow|shrink}-1"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".flex-{breakpoint}-{grow|shrink}-0"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".flex-{breakpoint}-{grow|shrink}-1"
        type="secondary"
      />
    </li>
  </ul>
</Fragment>
`;

exports[`Utilities: Flex JustifyContent renders 1`] = `
<Fragment>
  <h2
    id="justify-content"
  >
    Justify content
  </h2>
  <p>
    Use 
    <CodeTags
      code="justify-content"
      type="secondary"
    />
     utilities on flexbox containers to change the alignment of flex items on the main axis (the x-axis to start, y-axis if 
    <CodeTags
      code="flex-direction: column"
      type="secondary"
    />
    ). Choose from 
    <CodeTags
      code="start"
      type="secondary"
    />
     (browser default), 
    <CodeTags
      code="end"
      type="secondary"
    />
    , 
    <CodeTags
      code="center"
      type="secondary"
    />
    , 
    <CodeTags
      code="between"
      type="secondary"
    />
    , 
    <CodeTags
      code="around"
      type="secondary"
    />
    , or 
    <CodeTags
      code="evenly"
      type="secondary"
    />
    .
  </p>
  <ComponentPreview
    language="html"
    showCasePanel={true}
  >
    <div
      className="d-flex justify-content-start sc-highlight mb-3"
    >
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
    </div>
    <div
      className="d-flex justify-content-end sc-highlight mb-3"
    >
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
    </div>
    <div
      className="d-flex justify-content-center sc-highlight mb-3"
    >
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
    </div>
    <div
      className="d-flex justify-content-between sc-highlight mb-3"
    >
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
    </div>
    <div
      className="d-flex justify-content-around sc-highlight mb-3"
    >
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
    </div>
    <div
      className="d-flex justify-content-evenly sc-highlight"
    >
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
    </div>
  </ComponentPreview>
  <ComponentPreview
    codeFigure={true}
    language="html"
  >
    <div
      className="d-flex justify-content-start"
    >
      ...
    </div>
    <div
      className="d-flex justify-content-end"
    >
      ...
    </div>
    <div
      className="d-flex justify-content-center"
    >
      ...
    </div>
    <div
      className="d-flex justify-content-between"
    >
      ...
    </div>
    <div
      className="d-flex justify-content-around"
    >
      ...
    </div>
    <div
      className="d-flex justify-content-evenly"
    >
      ...
    </div>
  </ComponentPreview>
  <p>
    Responsive variations also exist for 
    <CodeTags
      code="justify-content"
      type="secondary"
    />
    .
  </p>
  <ul>
    <li>
      <CodeTags
        code=".justify-content-start"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".justify-content-end"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".justify-content-center"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".justify-content-between"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".justify-content-around"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".justify-content-evenly"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".justify-content-{breakpoint}-start"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".justify-content-{breakpoint}-end"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".justify-content-{breakpoint}-center"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".justify-content-{breakpoint}-between"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".justify-content-{breakpoint}-around"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".justify-content-{breakpoint}-evenly"
        type="secondary"
      />
    </li>
  </ul>
</Fragment>
`;

exports[`Utilities: Flex Order renders 1`] = `
<Fragment>
  <h2
    id="order"
  >
    Order
  </h2>
  <p>
    Change the 
    <i>
      visual
    </i>
     order of specific flex items with a handful of 
    <CodeTags
      code="order"
      type="secondary"
    />
     utilities. We only provide options for making an item first or last, as well as a reset to use the DOM 
    <CodeTags
      code="order"
      type="secondary"
    />
    . As order takes any integer value (e.g. 
    <CodeTags
      code="5"
      type="secondary"
    />
    ), add custom CSS for any additional values needed.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="d-flex flex-nowrap sc-highlight"
    >
      <div
        className="order-3 p-2 sc-highlight"
      >
        First flex item
      </div>
      <div
        className="order-2 p-2 sc-highlight"
      >
        Second flex item
      </div>
      <div
        className="order-1 p-2 sc-highlight"
      >
        Third flex item
      </div>
    </div>
  </ComponentPreview>
  <p>
    Responsive variations also exist for 
    <CodeTags
      code="order"
      type="secondary"
    />
    .
  </p>
  <ul>
    <li>
      <CodeTags
        code=".order-{0-12}"
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code=".order-{breakpoint}-{0-12}"
        type="secondary"
      />
    </li>
  </ul>
</Fragment>
`;

exports[`Utilities: Flex Wrap renders 1`] = `
<Fragment>
  <h2
    id="wrap"
  >
    Wrap
  </h2>
  <p>
    Change how flex items wrap in a flex container. Choose from no wrapping at all (the browser default) with 
    <CodeTags
      code=".flex-nowrap"
      type="secondary"
    />
    , wrapping with 
    <CodeTags
      code=".flex-wrap"
      type="secondary"
    />
    , or reverse wrapping with 
    <CodeTags
      code=".flex-wrap-reverse"
      type="secondary"
    />
    .
  </p>
  <ComponentPreview
    language="html"
    showCasePanel={true}
  >
    <div
      className="d-flex flex-nowrap sc-highlight"
      style={
        Object {
          "width": "8rem",
        }
      }
    >
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
    </div>
  </ComponentPreview>
  <ComponentPreview
    codeFigure={true}
    language="html"
  >
    <div
      className="d-flex flex-nowrap"
    >
      ...
    </div>
  </ComponentPreview>
  <ComponentPreview
    language="html"
    showCasePanel={true}
  >
    <div
      className="d-flex flex-wrap sc-highlight"
    >
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
    </div>
  </ComponentPreview>
  <ComponentPreview
    codeFigure={true}
    language="html"
  >
    <div
      className="d-flex flex-wrap"
    >
      ...
    </div>
  </ComponentPreview>
  <ComponentPreview
    language="html"
    showCasePanel={true}
  >
    <div
      className="d-flex flex-wrap-reverse sc-highlight"
    >
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
      <div
        className="p-2 sc-highlight"
      >
        Flex item
      </div>
    </div>
  </ComponentPreview>
  <ComponentPreview
    codeFigure={true}
    language="html"
  >
    <div
      className="d-flex flex-wrap-reverse"
    >
      ...
    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Utilities: Flex renders 1`] = `
<DocContainer>
  <p
    className="lead"
  >
    Quickly manage the layout, alignment, and sizing of grid columns, navigation, components, and more with a full suite of responsive flexbox utilities. For more complex implementations, custom CSS may be necessary.
  </p>
  <EnableFlexBehaviors />
  <Direction />
  <JustifyContent />
  <AlignItems />
  <AlignSelf />
  <Fill />
  <GrowAndShrink />
  <AutoMargins />
  <Wrap />
  <Order />
  <AlignContent />
</DocContainer>
`;
